@@ -2,6 +2,7 @@ etc/pam.d
 usr/bin
 usr/lib/*/compiz/libunity*.so
 usr/lib/*/unity/unity-active-plugins-safety-check
+usr/lib/*/unity/compiz-config-profile-setter
 usr/lib/*/unity/compiz-profile-selector
 usr/lib/*/unity/*-prestart-check
 usr/share/man/*/unity.1
