@@ -19,6 +19,7 @@ set(CFLAGS
 
 string (REPLACE ";" " " CFLAGS "${CFLAGS}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CFLAGS}")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${CFLAGS}")
 
 set(LIBS ${UAPSC_DEPS_LIBRARIES})
 
@@ -28,6 +29,10 @@ link_directories(${LIB_PATHS})
 add_executable(unity-active-plugins-safety-check unity_active_plugins_safety_check.cpp)
 target_link_libraries(unity-active-plugins-safety-check ${LIBS})
 install(TARGETS unity-active-plugins-safety-check DESTINATION ${UNITY_INSTALL_LIBDIR})
+
+add_executable(compiz-config-profile-setter compiz_config_profile_setter.c)
+target_link_libraries(compiz-config-profile-setter ${LIBS})
+install(TARGETS compiz-config-profile-setter DESTINATION ${UNITY_INSTALL_LIBDIR})
 
 configure_file (${CMAKE_CURRENT_SOURCE_DIR}/compiz-profile-selector.in ${CMAKE_CURRENT_BINARY_DIR}/compiz-profile-selector @ONLY)
 install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/compiz-profile-selector DESTINATION ${UNITY_INSTALL_LIBDIR})
